--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "proxy": "http://localhost:8001",
   "dependencies": {
     "axios": "^0.21.1",
-    "classnames": "^2.2.6",
+    "classnames": "^2.3.1",
     "normalize.css": "^8.0.1",
     "react": "^16.14.0",
     "react-dom": "^16.9.0",
@@ -43,7 +43,8 @@
     "@testing-library/react": "^8.0.7",
     "@testing-library/react-hooks": "^7.0.1",
     "babel-loader": "^8.0.5",
-    "node-sass": "^4.14.0"
+    "node-sass": "^4.14.0",
+    "prop-types": "^15.7.2"
   },
   "jest": {
     "watchPathIgnorePatterns": [
