--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "normalize.css": "^8.0.1",
     "react": "^16.14.0",
     "react-dom": "^16.9.0",
+    "react-test-renderer": "^16.9.0",
     "react-scripts": "3.0.0"
   },
   "scripts": {
